--- a/style/_header.scss
+++ b/style/_header.scss
@@ -39,7 +39,8 @@ body {
   .navbar {
     @include Flex(row, space-between);
     width: 100%;
-    margin-bottom: 3rem;
+    margin: 0 auto;
+    // margin-bottom: 3rem;
     // position: relative;
     z-index: 10;
 
