--- a/style/style.css
+++ b/style/style.css
@@ -382,8 +382,11 @@ a:hover {
 
 .sticky {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  max-width: 80%;
+  max-width: 100%;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
@@ -552,7 +555,7 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  margin-bottom: 3rem;
+  margin: 0 auto;
   z-index: 10;
 }
 
@@ -784,8 +787,11 @@ a:hover {
 
 .sticky {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  max-width: 80%;
+  max-width: 100%;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
